src/examples/should_fail/clash_terminal_nonterminal.kiki
start Blah

struct Blah

terminal Token {
    $Blah: String
}
